--- a/people.html
+++ b/people.html
@@ -552,7 +552,15 @@ candidate biomarkers.<br>
           <br>
           +1 410-502-6665 <a href="mailto:yxu82@jhmi.edu">yxu82 at jhmi dot edu</a></span> </p>      </td> 
               </tr>
-              </tbody></table>
+<!-- Added Leah profile on July 06, 2017 -->
+<tr> 
+                
+      <td> <p align="justify"><img src="images/Liang.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Ye Liang </font></b> obtained her B.S. degree from University of Wisconsin, Milwaukee. Subsequently, she worked in the Pediatric Surgery Department as lab technician at Medical College of Wisconsin. She is currently pursuing her M.S. degree in Biotechnology and Bioinformatics at Johns Hopkins University. She is involved in proteomic studies on breast cancer. <br>
+          <br>
+          +1 410-502-6665 <a href="mailto:yliang25@jhu.edu">yliang25 at jhu dot edu</a></span> </p>      </td> 
+              </tr>
+
+</tbody></table>
 <br><br>
 </div>
             </td>
