Added new PubMed:28877962

--- a/publications.html
+++ b/publications.html
@@ -116,8 +116,11 @@ function MM_swapImage() { //v3.0
 					
 <p align="justify"><font color="#333366"><b>2017</b></font></p>			
 
+<!-- Added: September 28, 2017; Last updated: September 28, 2017 -->
+<p align="justify"> McCall, M. N., Kim, M. S., Adil, M., Patil, A. H., Lu, Y., Mitchell, C. J., Leal-Rojas, P., Xu, J., Kumar, M., Dawson, V. L., Dawson, T. M., Baras, A. S., Rosenberg, A. Z., Arking, D. E., Burns, K. H., Pandey, A. and Halushka, M. K. (2017). Toward the human cellular microRNAome. <em> Genome Research.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28877962" target="_blank">[PubMed]</a> </p>
+
 <!-- Added: July 23, 2017; Last updated: July 23, 2017 -->
-<p align="justify"> Sreenivasamurthy, S. K., Madugundu, A. K., Patil, A. H., Dey, G., Mohanty, A. K., Kumar, M., Patel, K., Wang, C., Kumar, A., Pandey, A. and Prasad, T. S. K. (2017). Mosquito-borne diseases and omics: Tissue-restricted expression and alternative splicing revealed by transcriptome profiling of <em>Anopheles stephensi</em>. <em> OMICS: A Journal of Integrative Biology.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28708456" target="_blank">[PubMed]</a> </p>
+<p align="justify"> Sreenivasamurthy, S. K., Madugundu, A. K., Patil, A. H., Dey, G., Mohanty, A. K., Kumar, M., Patel, K., Wang, C., Kumar, A., Pandey, A. and Prasad, T. S. K. (2017). Mosquito-borne diseases and omics: Tissue-restricted expression and alternative splicing revealed by transcriptome profiling of <em>Anopheles stephensi</em>. <em> OMICS: A Journal of Integrative Biology.</em> 21:488-497. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28708456" target="_blank">[PubMed]</a> </p>
 <p align="justify"> Sharma, K., Verma, R., Advani, J., Chatterjee, O., Solanki, H. S., Sharma, A., Varma, S., Modi, M., Ray, P., Mukherjee, K. K., Sharma, M., Dhillion, M. S., Suar, M., Chatterjee, A., Pandey, A., Prasad, T. S. K. and Gowda, H. (2017). Whole genome sequencing of <em>Mycobacterium tuberculosis</em> isolates from extrapulmonary sites. <em> OMICS: A Journal of Integrative Biology.</em> 21, 413-425. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28692415" target="_blank">[PubMed]</a> </p>
 <p align="justify"> Muthusamy, B., Selvan, L. D. N., Nguyen, T. T., Manoj, J., Stawiski, E. W., Jaiswal, B. S., Wang, W., Raja, R., Ramprasad, V. L., Gupta, R., Murugan, S., Kadandale, J. S., Prasad, T. S. K., Reddy, K., Peterson, A., Pandey, A., Seshagiri, S., Girimaji, S. C. and Gowda, H. (2017). Next-generation sequencing reveals novel mutations in X-linked intellectual disability. <em> OMICS: A Journal of Integrative Biology. </em> 21, 295-303. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28481730" target="_blank">[PubMed]</a> </p>
 
@@ -763,7 +766,7 @@ Shao, H., Chaerkady, R., Chen, S., Pinto, S. M., Sharma,
 	  Birney, E., Collado-Vides, J., Goto, S., Hucka, M., Novere, N. L., Maltsev,
 	  N., Pandey, A., Thomas, P., Wingender, E., Karp, P. D., Sander, C. and
 	  Bader, G. D. (2010).  BioPAX - A community standard for pathway data sharing.<em> Nature
-	  Biotechnology</em>. <!-- In Press.-->   28,
+	  Biotechnology</em>. 28,
 
 	  935-942. <a href="http://www.nature.com/nbt/journal/v28/n9/full/nbt.1666.html">[PubMed]</a><br>
       <br>
@@ -778,14 +781,14 @@ Shao, H., Chaerkady, R., Chen, S., Pinto, S. M., Sharma,
 	  quantitative proteomic approach to identify potential biomarkers from the
 	  esophageal
 	  squamous cell carcinoma secretome.<em> Cancer Biology and Therapy</em>. 10, 796-810.
-	  <!-- In Press.--> <a href="http://www.ncbi.nlm.nih.gov/pubmed/20686364">[PubMed]</a><br><br>
+	  <a href="http://www.ncbi.nlm.nih.gov/pubmed/20686364">[PubMed]</a><br><br>
 	    
 	  Yang, Y., Chaerkady, R., Kandasamy, K., Huang, T. C., Selvan, L. D. N.,
 	  Dwivedi, S. B., Kent, O. A., Mendell, J. T. and Pandey, A. (2010).  Identifying
 
 	  targets of
 	  miR-143 using a SILAC-based proteomic approach.<em> Molecular Biosystems</em>.
-	  6, 1873-1882. <a href="http://www.ncbi.nlm.nih.gov/pubmed/20544124">[PubMed]</a><!-- In Press--><br>
+	  6, 1873-1882. <a href="http://www.ncbi.nlm.nih.gov/pubmed/20544124">[PubMed]</a><br>
 
 
 	  <br>    
@@ -1203,8 +1206,8 @@ Dynamic interplay between O-GlcNAcylation and GSK-3-dependent phosphorylation. <
 
 <br>
 Kim, J. W., Molina, H., Pandey, A. and Lane, M. D. (2007).   
-Upstream stimulatory factors regulate the C/EBPalpha gene during differentiation
-of 3T3-L1 preadipocytes. <i>Biochem. Biophys. Res. Commun</i>. 354, 517-521. 
+Upstream stimulatory factors regulate the C/EBP alpha gene during differentiation
+of 3T3-L1 preadipocytes. <i>Biochemical and Biophysical Research Communications</i>. 354, 517-521. 
 <a href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?db=pubmed&cmd=Retrieve&dopt=AbstractPlus&list_uids=17239350&query_hl=3&itool=pubmed_docsum">[PubMed]</a>
 
 
