--- a/people.html
+++ b/people.html
@@ -555,6 +555,13 @@ candidate biomarkers.<br>
           <br>
           +1 410-502-3194 <a href="mailto:anil.madugundu@jhmi.edu">anil.madugundu at jhmi dot edu</a></span> </p>      </td> 
               </tr>
+<!-- Added Hongming Song profile on October 12, 2017 -->
+<tr> 
+                
+      <td> <p align="justify"><img src="images/HongmingSong.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Hongming Song </font></b> obtained his B.S. degree in Medicine from Weifang Medical University, China. Thereafter, he obtained his M.S. degree in Surgery from Tongji University, China. Now he is pursuing his Ph.D. degree in Surgery at Tongji University School of Medicine, China. He is currently a visiting student in Dr. Pandey’s group studying signaling pathways and protein-protein interactions in breast cancer using mass spectrometry-based proteomic approaches. <br>
+          <br>
+          +1 410-502-6665 <a href="mailto:hongming@jhmi.edu">hongming at jhmi dot edu</a></span> </p>      </td> 
+              </tr>
 <!-- Added Yaoyu profile on May 27, 2017 -->
 <tr> 
                 
