Added new profile of Jaehun Jung on November 05, 2017

--- a/people.html
+++ b/people.html
@@ -571,10 +571,14 @@ candidate biomarkers.<br>
               </tr>
 <!-- Added Leah profile on July 06, 2017 -->
 <tr> 
-                
+      <td> <p align="justify"><img src="images/Jaehun.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Jaehun Jung </font></b> obtained his M.Sc. degree in Pharmacology from Konkuk University in Seoul, South Korea.  He is pursuing his Ph.D. degree in Biochemistry, Proteomics, Lipidomics and Metabolomics at the Kyung Hee University in South Korea. As a research trainee in Dr. Pandey’s laboratory, he is developing novel methodologies for metabolome and lipidome analysis using mass spectrometry in addition to applying proteomics for studying post-translational modifications in the context of cancer signaling. <br>
+          <br>
+          +1 410-502-6665 <a href="mailto:jaehun@jhmi.edu">jaehun at jhmi dot edu</a></span> </p>      </td> 
+              </tr>
+<tr>
       <td> <p align="justify"><img src="images/YeLiang.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Ye Liang </font></b> obtained her B.S. degree from University of Wisconsin, Milwaukee. Subsequently, she worked in the Pediatric Surgery Department as a lab technician at the Medical College of Wisconsin. She is currently pursuing her M.S. degree in Biotechnology and Bioinformatics at Johns Hopkins University. In the Pandey lab, she is involved in proteomic analysis of breast cancer subtypes. <br>
           <br>
-          +1 410-502-6665 <a href="mailto:yliang25@jhu.edu">yliang25 at jhu dot edu</a></span> </p>      </td> 
+          +1 410-502-6665 <a href="mailto:yliang25@jhu.edu">yliang25 at jhu dot edu</a></span> </p>      </td>
               </tr>
 
 </tbody></table>
