Added Yunmei Wang profile

--- a/people.html
+++ b/people.html
@@ -530,7 +530,7 @@ candidate biomarkers.<br>
               </tr> -->
 			  <tr> 
                 
-      <td> <p align="justify"><img src="images/gajanan.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366">Gajanan sathe </font></b>obtained his M.Sc. degree in Biotechnology from University of Pune, India. He is pursuing his Ph.D. at the Institute of Bioinformatics in Bangalore, India. He is currently working with Dr. Abhay Moghekar in the Department of Neurology at Johns Hopkins and is collaborating with the Pandey lab on proteomic analysis of CSF samples and brain tissues from various neurological disorders. 
+      <td> <p align="justify"><img src="images/gajanan.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366">Gajanan Sathe </font></b>obtained his M.Sc. degree in Biotechnology from University of Pune, India. He is pursuing his Ph.D. at the Institute of Bioinformatics in Bangalore, India. He is currently working with Dr. Abhay Moghekar in the Department of Neurology at Johns Hopkins and is collaborating with the Pandey lab on proteomic analysis of CSF samples and brain tissues from various neurological disorders. 
 <br>
           <br>
           +1 410-502-3194 <a href="mailto:gajanan@jhmi.edu">gajanan at jhmi dot edu</a></span> </p>      </td> 
@@ -555,6 +555,15 @@ candidate biomarkers.<br>
           <br>
           +1 410-502-3194 <a href="mailto:anil.madugundu@jhmi.edu">anil.madugundu at jhmi dot edu</a></span> </p>      </td> 
               </tr>
+<!-- Added Yunmei Want profile on November 9, 2017 -->
+<tr>
+
+      <td> <p align="justify"><img src="images/Yunmei.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Yunmei Wang </font></b> obtained her M.D. degree from Xi'an Jiaotong University in China. Subsequently, she worked as a resident and as an Attending doctor in the Department of Oncology at the Shaanxi Province Tumor Hospital. She is currently pursuing her Ph.D. degree in Oncology at Xi'an Jiaotong University. As a research trainee in Dr. Pandey's lab, she is involved in clinical proteomics including analysis of formalin-fixed (FFPE) tumor samples. <br>
+          <br>
+          +1 410-502-6665 <a href="mailto:yunmei@jhmi.edu">yunmei at jhmi dot edu</a></span> </p>      </td>
+              </tr>
+<tr>
+
 <!-- Added Hongming Song profile on October 12, 2017 -->
 <tr> 
                 
