Added Na et al. (2017). Genome Research

--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@ function MM_swapImage() { //v3.0
 					
 <p align="justify"><font color="#333366"><b>2017</b></font></p>			
 <!-- Added: November 16, 2017; Last updated: November 16, 2017 -->
-<p align="justify"> Na, C. N., Barbhuiya, M. A., Kim, M. S., Verbruggen, S., Eacker, S. M., Pletnikova, O., Troncoso, J. C., Halushka, M. K., Menschaert, G., Overall, C. M. and Pandey. A. (2017). Discovery of non-canonical translation initiation sites through mass spectrometric analysis of protein N-termini. <em>Genome Research.</em> In press. </p>
+<p align="justify"> Na, C. H., Barbhuiya, M. A., Kim, M. S., Verbruggen, S., Eacker, S. M., Pletnikova, O., Troncoso, J. C., Halushka, M. K., Menschaert, G., Overall, C. M. and Pandey. A. (2017). Discovery of non-canonical translation initiation sites through mass spectrometric analysis of protein N-termini. <em>Genome Research.</em> In press. </p>
 
 <!-- Added: September 28, 2017; Last updated: September 28, 2017 -->
 <p align="justify"> McCall, M. N., Kim, M. S., Adil, M., Patil, A. H., Lu, Y., Mitchell, C. J., Leal-Rojas, P., Xu, J., Kumar, M., Dawson, V. L., Dawson, T. M., Baras, A. S., Rosenberg, A. Z., Arking, D. E., Burns, K. H., Pandey, A. and Halushka, M. K. (2017). Toward the human cellular microRNAome. <em> Genome Research.</em> 27, 1769-1781. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28877962" target="_blank">[PubMed]</a> </p>
