--- a/publications.html
+++ b/publications.html
@@ -115,8 +115,11 @@ function MM_swapImage() { //v3.0
                     <blockquote>
 					
 <p align="justify"><font color="#333366"><b>2017</b></font></p>			
-<!-- Added: November 16, 2017; Last updated: November 16, 2017 -->
-<p align="justify"> Na, C. H., Barbhuiya, M. A., Kim, M. S., Verbruggen, S., Eacker, S. M., Pletnikova, O., Troncoso, J. C., Halushka, M. K., Menschaert, G., Overall, C. M. and Pandey. A. (2017). Discovery of non-canonical translation initiation sites through mass spectrometric analysis of protein N-termini. <em>Genome Research.</em> In press. </p>
+<!-- Added: December 14, 2017; Last updated: December 14, 2017 -->
+<p align="justify"> Li, Z., Cheng, Z., Raghothama, C., Cui, Z., Liu, K., Li, X., Jiang, C., Jiang, W., Tan, M., Ni, X., Pandey, A., Liu, J. O. and Dang, Y. (2017). USP9X controls translation efficiency via deubiquitination of eukaryotic translation initiation factor 4A1. <em>Nucleic Acids Research.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29228324" target="_blank">[PubMed]</a></p>
+
+<!-- Added: November 16, 2017; Last updated: December 14, 2017 -->
+<p align="justify"> Na, C. H., Barbhuiya, M. A., Kim, M. S., Verbruggen, S., Eacker, S. M., Pletnikova, O., Troncoso, J. C., Halushka, M. K., Menschaert, G., Overall, C. M. and Pandey. A. (2017). Discovery of non-canonical translation initiation sites through mass spectrometric analysis of protein N-termini. <em>Genome Research.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29162641" target="_blank">[PubMed]</a></p>
 
 <!-- Added: September 28, 2017; Last updated: September 28, 2017 -->
 <p align="justify"> McCall, M. N., Kim, M. S., Adil, M., Patil, A. H., Lu, Y., Mitchell, C. J., Leal-Rojas, P., Xu, J., Kumar, M., Dawson, V. L., Dawson, T. M., Baras, A. S., Rosenberg, A. Z., Arking, D. E., Burns, K. H., Pandey, A. and Halushka, M. K. (2017). Toward the human cellular microRNAome. <em> Genome Research.</em> 27, 1769-1781. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28877962" target="_blank">[PubMed]</a> </p>
