Update Wu et al. PubMed: 27902967

--- a/publications.html
+++ b/publications.html
@@ -145,9 +145,10 @@ function MM_swapImage() { //v3.0
 <!-- Addeded: November 30, 2016 -->
 <p align="justify">Prasad, T. S. K., Mohanty, A. K., Kumar, M., Sreenivasamurthy, S. K., Dey, G., Nirujogi, R. S., Pinto, S. M., Madugundu, A. K., Patil, A. H., Advani, J., Manda, S. S., Gupta, M. K., Dwivedi, S. B., Kelkar, D. S., Hall, B., Jiang, X., Peery, A., Rajagopalan, P., Yelamanchi, S. D., Solanki, H. S., Raja, R., Sathe, G. J., Chavan, S. N., Verma, R., Patel, K. M., Jain, A. P., Syed, N., Datta, K. K., Khan, A. A., Dammalli, M., Jayaram, S., Radhakrishnan, A., Mitchell, C. J., Na, C. H., Kumar, N., Sinnis, P., Sharakhov, I. V., Wang, C., Gowda, H., Tu, Z., Kumar, A., and Pandey, A. (2017). Integrating transcriptomic and proteomic data for accurate assembly and annotation of genomes.<em> Genome Research.</em> 27, 133-144. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28003436" target="_blank">[PubMed]</a> </p>
 
-<p align="justify"><font color="#333366"><b>2016</b></font></p>			
-<!-- Addeded: December 14, 2016 -->
-<p align="justify">Wu, X., Zahari, M. S., Renuse, S., Kelkar, D. S., Bharbuiya, M. A., Rojas, P. L., Stearns, V., Gabrielson, E., Malla, P., Sukumar, S., Mahajan, N. P. and Pandey, A. (2016). The non-receptor tyrosine kinase TNK2/ACK1 is a novel therapeutic target in triple negative breast cancer.<em> Oncotarget</em>. <a href="http://www.ncbi.nlm.nih.gov/pubmed/27902967" target="_blank">[PubMed]</a> </p>
+<!-- Addeded: December 14, 2016; Updated: December 15, 2017 -->
+<p align="justify">Wu, X., Zahari, M. S., Renuse, S., Kelkar, D. S., Bharbuiya, M. A., Rojas, P. L., Stearns, V., Gabrielson, E., Malla, P., Sukumar, S., Mahajan, N. P. and Pandey, A. (2017). The non-receptor tyrosine kinase TNK2/ACK1 is a novel therapeutic target in triple negative breast cancer.<em> Oncotarget</em>. 8, 2971-2983. <a href="http://www.ncbi.nlm.nih.gov/pubmed/27902967" target="_blank">[PubMed]</a> </p>
+
+<p align="justify"><font color="#333366"><b>2016</b></font></p>
 
 <p align="justify">Rajagopalan, P., Nanjappa, V., Raja, R., Jain, A. P., Mangalaparthi, K. K., Sathe, G. J., Babu, N., Patel, K., Cavusoglu, N., Soeur, J., Pandey, A., Roy, N., Breton, L., Chatterjee, A., Misra, N. and Gowda, H. (2016). How does chronic cigarette smoke exposure affect human skin? A global proteomics study in primary human keratinocytes. <em> OMICS: A Journal of Integrative Biology. </em> 20, 615-626. <a href="http://www.ncbi.nlm.nih.gov/pubmed/27828771" target="_blank">[PubMed]</a></p>
 
