Changed the title of alumni.html page to 'Pandey Lab Alumni'

--- a/alumni.html
+++ b/alumni.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!-- saved from url=(0064)past_members.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Pandey Lab  past_members</title>
+<title>Pandey Lab Alumni</title>
 
 <meta name="description" content="The Pandey Lab at Johns Hopkins University is an interdisciplinary group of molecular biologists, mass spectrometrists and computational biologists who are interested in systems biology.">
 <style type="text/css">
