Added 29249144 and Kim, S. et al PNAS; Updated 29162641

--- a/publications.html
+++ b/publications.html
@@ -114,15 +114,22 @@ function MM_swapImage() { //v3.0
                    
                     <blockquote>
 					
+<p align="justify"><font color="#333366"><b>2018</b></font></p>
+<!-- Added: November 16, 2017; Last updated: January 08, 2018 -->
+<p align="justify"> Na, C. H., Barbhuiya, M. A., Kim, M. S., Verbruggen, S., Eacker, S. M., Pletnikova, O., Troncoso, J. C., Halushka, M. K., Menschaert, G., Overall, C. M. and Pandey. A. (2018). Discovery of non-canonical translation initiation sites through mass spectrometric analysis of protein N-termini. <em>Genome Research.</em> 28, 25-36. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29162641" target="_blank">[PubMed]</a></p>
+
 <p align="justify"><font color="#333366"><b>2017</b></font></p>			
+<!-- Added: January 08, 2018; Last updated: January 08, 2018 -->
+<p align="justify"> Kim, D. I., Cutler, J. A., Na, C. H., Reckel, S., Renuse, S., Madugundu, A. K., Tahir, R., Goldschmidt, H. L., Reddy, K. L., Huganir, R. L., Wu, X., Zachara, N. E., Hantschel, O. and Pandey, A. (2017). BioSITe: A Method for Direct Detection and Quantitation of Site-Specific Biotinylation. <em>Journal of Proteome Research.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29249144" target="_blank">[PubMed]</a></p>
+
 <!-- Added: December 14, 2017; Last updated: December 14, 2017 -->
 <p align="justify"> Li, Z., Cheng, Z., Raghothama, C., Cui, Z., Liu, K., Li, X., Jiang, C., Jiang, W., Tan, M., Ni, X., Pandey, A., Liu, J. O. and Dang, Y. (2017). USP9X controls translation efficiency via deubiquitination of eukaryotic translation initiation factor 4A1. <em>Nucleic Acids Research.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29228324" target="_blank">[PubMed]</a></p>
 
-<!-- Added: November 16, 2017; Last updated: December 14, 2017 -->
-<p align="justify"> Na, C. H., Barbhuiya, M. A., Kim, M. S., Verbruggen, S., Eacker, S. M., Pletnikova, O., Troncoso, J. C., Halushka, M. K., Menschaert, G., Overall, C. M. and Pandey. A. (2017). Discovery of non-canonical translation initiation sites through mass spectrometric analysis of protein N-termini. <em>Genome Research.</em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29162641" target="_blank">[PubMed]</a></p>
-
 <!-- Added: September 28, 2017; Last updated: September 28, 2017 -->
 <p align="justify"> McCall, M. N., Kim, M. S., Adil, M., Patil, A. H., Lu, Y., Mitchell, C. J., Leal-Rojas, P., Xu, J., Kumar, M., Dawson, V. L., Dawson, T. M., Baras, A. S., Rosenberg, A. Z., Arking, D. E., Burns, K. H., Pandey, A. and Halushka, M. K. (2017). Toward the human cellular microRNAome. <em> Genome Research.</em> 27, 1769-1781. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28877962" target="_blank">[PubMed]</a> </p>
+
+<!-- Added: January 08, 2018; Last updated: January 08, 2018 -->
+<p align="justify"> Kim, S., Yun, S. P., Lee, S., Umanah, G. E., Bandaru, V. V. R., Yin, X., Rhee, P., Karuppagounder, S. S., Kwon, S. H., Lee, H., Maoa, X., Kim, D. Pandey, A., Lee, G., Dawson, V. L., Dawson, T. M. and Koa, H. S. (2017). GBA1 deficiency negatively affects physiological α-synuclein tetramers and related multimers. <em>Proceedings of the National Academy of Sciences U.S.A.</em> In press. </p>
 
 <!-- Added: July 23, 2017; Last updated: July 23, 2017 -->
 <p align="justify"> Sreenivasamurthy, S. K., Madugundu, A. K., Patil, A. H., Dey, G., Mohanty, A. K., Kumar, M., Patel, K., Wang, C., Kumar, A., Pandey, A. and Prasad, T. S. K. (2017). Mosquito-borne diseases and omics: Tissue-restricted expression and alternative splicing revealed by transcriptome profiling of <em>Anopheles stephensi</em>. <em> OMICS: A Journal of Integrative Biology.</em> 21:488-497. <a href="http://www.ncbi.nlm.nih.gov/pubmed/28708456" target="_blank">[PubMed]</a> </p>
