--- a/people.html
+++ b/people.html
@@ -571,6 +571,15 @@ candidate biomarkers.<br>
           <br>
           +1 410-502-6665 <a href="mailto:hongming@jhmi.edu">hongming at jhmi dot edu</a></span> </p>      </td> 
               </tr>
+
+<!-- Added Xiangyu Wang profile on January 09, 2018 -->
+<tr>
+
+      <td> <p align="justify"><img src="images/Xiangyu.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Xiangyu Wang </font></b> obtained his medical degree from Harbin Medical University in China followed by specialization in Surgical Oncology from Peking Union Medical College in Beijing, China. He is pursuing his Ph.D. degree at Peking Union Medical College. As a researcher in Dr. Pandey's lab, he is involved in studying breast cancer using proteomics. <br>
+          <br>
+          +1 410-502-6665 <a href="mailto:xiangyu@jhmi.edu">xiangyu at jhmi dot edu</a></span> </p>      </td>
+              </tr>
+
 <!-- Added Yaoyu profile on May 27, 2017 -->
 <tr> 
                 
