--- a/publications.html
+++ b/publications.html
@@ -115,6 +115,9 @@ function MM_swapImage() { //v3.0
                     <blockquote>
 					
 <p align="justify"><font color="#333366"><b>2018</b></font></p>
+<!-- Added: April 25, 2018; Last updated: April 25, 2018 -->
+<p align="justify"> Heo, S., Diering, G. H., Na, C. H., Nirujogi, R. S., Bachman, J. L., Pandey, A. and Huganir, R. L. (2018). Identification of long-lived synaptic proteins by proteomic analysis of synaptosome protein turnover. <em> Proceedings of the National Academy of Sciences U.S.A. </em> 115, E3827-E3836. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29610302" target="_blank">[PubMed]</a></p>
+<p align="justify"> Solanki, H. S., Raja, R., Zhavoronkov, A., Ozerov, I. V., Artemov, A. V., Advani, J., Radhakrishnan, A., Babu, N., Puttamallesh, V. N., Syed, N., Nanjappa, V., Subbannayya, T., Sahasrabuddhe, N. A., Patil, A. H., Prasad, T. S. K., Gaykalova, D., Chang, X., Sathyendran, R., Mathur, P. P., Rangarajan, A., Sidransky, D., Pandey, A., Izumchenko, E., Gowda, H. and Chatterjee, A. (2018). Targeting focal adhesion kinase overcomes erlotinib resistance in smoke induced lung cancer by altering phosphorylation of epidermal growth factor receptor. <em> Oncoscience.</em> 5, 21-38. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29556515" target="_blank">[PubMed]</a></p>
 <!-- Added: March 01, 2018; Last updated: March 01, 2018 -->
 <p align="justify"> Lee, S. E., Song, J., Bösl, K., Müller, A. C., Vitko, D., Bennett, K. L., Superti-Furga, G., Pandey, A., Kandasamy, R. K., Kim, M. S. (2018). Proteogenomic analysis to identify missing proteins from haploid cell lines. <em> Proteomics. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29474001" target="_blank">[PubMed]</a></p> 
 <!-- Added: March 01, 2018; Last updated: March 01, 2018 -->
