Three lastest publications added - 29742327, 29719615 and 29705949

--- a/publications.html
+++ b/publications.html
@@ -115,11 +115,18 @@ function MM_swapImage() { //v3.0
                     <blockquote>
 					
 <p align="justify"><font color="#333366"><b>2018</b></font></p>
+<!-- Added: May 15, 2018; Last updated: May 15, 2018 -->
+<p align="justify"> Pinto, S. M., Subbannayya, Y., Rex, D. A. B., Raju, R., Chatterjee, O., Advani, J., Radhakrishnan, A., Prasad, T. S. K., Wani, M. R. and Pandey, A. (2018). A network map of IL-33 signaling pathway. <em> Journal of Cell Communication and Signaling. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29705949" target="_blank">[PubMed]</a> </p>
+
+<p align="justify"> Danda, R., Ganapathy, K., Sathe, G., Madugundu, A. K., Krishnan, U. M., Khetan, V., Rishi, P., Gowda, H., Pandey, A., Subramanian, K., Prasad, T. S. K. and Elchuri, S. V. (2018). Membrane Proteome of Invasive Retinoblastoma: Differential Proteins and Biomarkers. <em> PROTEOMICS – Clinical Applications. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29742327" target="_blank">[PubMed]</a> </p>
+
+<p align="justify"> Barbhuiya, M. A., Kashyap, M. K., Puttamallesh, V. N., Kumar, R. V., Wu, X., Pandey, A. and Gowda, H. (2018). Identification of spleen tyrosine kinase as a potential therapeutic target for esophageal squamous cell carcinoma using reverse phase protein arrays. <em> Oncotarget. </em> 9, 18422-18434. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29719615" target="_blank">[PubMed]</a> </p>
+
 <!-- Added: April 25, 2018; Last updated: April 25, 2018 -->
 <p align="justify"> Heo, S., Diering, G. H., Na, C. H., Nirujogi, R. S., Bachman, J. L., Pandey, A. and Huganir, R. L. (2018). Identification of long-lived synaptic proteins by proteomic analysis of synaptosome protein turnover. <em> Proceedings of the National Academy of Sciences U.S.A. </em> 115, E3827-E3836. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29610302" target="_blank">[PubMed]</a></p>
 <p align="justify"> Solanki, H. S., Raja, R., Zhavoronkov, A., Ozerov, I. V., Artemov, A. V., Advani, J., Radhakrishnan, A., Babu, N., Puttamallesh, V. N., Syed, N., Nanjappa, V., Subbannayya, T., Sahasrabuddhe, N. A., Patil, A. H., Prasad, T. S. K., Gaykalova, D., Chang, X., Sathyendran, R., Mathur, P. P., Rangarajan, A., Sidransky, D., Pandey, A., Izumchenko, E., Gowda, H. and Chatterjee, A. (2018). Targeting focal adhesion kinase overcomes erlotinib resistance in smoke induced lung cancer by altering phosphorylation of epidermal growth factor receptor. <em> Oncoscience.</em> 5, 21-38. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29556515" target="_blank">[PubMed]</a></p>
 <!-- Added: March 01, 2018; Last updated: March 01, 2018 -->
-<p align="justify"> Lee, S. E., Song, J., Bösl, K., Müller, A. C., Vitko, D., Bennett, K. L., Superti-Furga, G., Pandey, A., Kandasamy, R. K., Kim, M. S. (2018). Proteogenomic analysis to identify missing proteins from haploid cell lines. <em> Proteomics. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29474001" target="_blank">[PubMed]</a></p> 
+<p align="justify"> Lee, S. E., Song, J., Bösl, K., Müller, A. C., Vitko, D., Bennett, K. L., Superti-Furga, G., Pandey, A., Kandasamy, R. K., Kim, M. S. (2018). Proteogenomic analysis to identify missing proteins from haploid cell lines. <em> Proteomics. </em> 18, e1700386. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29474001" target="_blank">[PubMed]</a></p> 
 <!-- Added: March 01, 2018; Last updated: March 01, 2018 -->
 <p align="justify"> Wang, Z., Kim, M. S., Martinez-Ferrando, I., Koleske, A. J., Pandey, A., Cole, P. A. (2018). Analysis of cellular tyrosine phosphorylation via chemical rescue of conditionally active Abl kinase. <em> Biochemistry. </em> 57, 1390-1398. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29341593" target="_blank">[PubMed]</a></p> 
 <!-- Added: January 08, 2018; Last updated: March 01, 2018 -->
