Added Daein and Jevon from people

--- a/alumni.html
+++ b/alumni.html
@@ -466,7 +466,28 @@ Electrical and Computer Engineering at UCSD where he pursued computational biolo
       <td> <p align="justify"><img src="images/YeLiang.jpg" width="85" height="114" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left"><span class="body"> <b><font color="#333366"> Ye Liang </font></b> obtained her B.S. degree from University of Wisconsin, Milwaukee. Subsequently, she worked in the Pediatric Surgery Department as a lab technician at the Medical College of Wisconsin. She is currently pursuing her M.S. degree in Biotechnology and Bioinformatics at Johns Hopkins University. In the Pandey lab, she is involved in proteomic analysis of breast cancer subtypes. <br>
           <br>
           +1 410-502-6665 <a href="mailto:yliang25@jhu.edu">yliang25 at jhu dot edu</a></span> </p>      </td>
-              </tr>  
+              </tr>
+
+<tr>
+
+      <td> <p align="justify"><img src="images/daein.jpg" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left" width="85">
+          <span class="body"><b><font color="#333366">Daein Kim, Ph.D.</font></b> obtained his Ph.D. degree from the University of Florida in the laboratory of Dr. Brian Burke. Subsequently he joined Dr. Kyle Roux’s group at Sanford Research as a postdoctoral fellow and played an instrumental role in the development of proximity-dependent biotin identification (BioID). His research interest is proteomic and cellular characterization of protein-protein interactions that potentially lead to great therapeutic breakthroughs in cancer treatment.
+<br>      
+          <br>
+          +1 410-502-6665 <a href="mailto:daein.kim@jhmi.edu">daein.kim at jhmi dot edu
+          </a></span> </p>          </td>
+              </tr>
+
+<tr>
+
+      <td> <p align="justify"><img src="images/jevon.jpg" style="padding: 2 2 2 2; border: solid 1px #9B989A;" align="left" width="85">
+          <span class="body"><b><font color="#333366">Jevon Cutler </font></b> obtained his B.Sc. degree in Political Science from the University of Oregon, Oregon. He is pursuing his Ph.D. degree in Human Genetics at the Johns Hopkins University School of Medicine. He is currently characterizing oncogenic signaling in leukemia using phosphoproteomic and protein-protein interaction based approaches.
+<br>
+          <br>
+          +1 410-502-6665 <a href="mailto:jevon@jhmi.edu">jevon at jhmi dot edu
+          </a></span> </p>          </td>
+              </tr>
+
               </tbody></table>
 <br><br>
 </div>
