--- a/publications.html
+++ b/publications.html
@@ -116,6 +116,10 @@ function MM_swapImage() { //v3.0
 					
 <p align="justify"><font color="#333366"><b>2018</b></font></p>
 <!-- Added: May 15, 2018; Last updated: May 15, 2018 -->
+<p align="justify"> Selvan, L. D. N., Danda, R., Madugundu, A. K., Puttamallesh, V. N., Sathe, G. J., Krishnan, U. M., Khetan, V., Rishi, P., Prasad, T. S. K., Pandey, A., Krishnakumar, S., Gowda, H. and Elchuri, S. V. (2018). Phosphoproteomics of Retinoblastoma: A pilot study identifies aberrant kinases. <em> Molecules. </em> 23. E1454. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29914080" target="_blank">[PubMed]</a> </p>
+<p align="justify"> Rajagopalan, P., Jain, A. P., Nanjappa, V., Patel, K., Mangalaparthi, K. K., Babu, N., Cavusoglu, N., Roy, N., Soeur, J., Breton, L., Pandey, A., Gowda, H., Chatterjee, A. and Misra, N. (2018). Proteome-wide changes in primary skin keratinocytes exposed to diesel particulate extract – a role for antioxidants in skin health. <em> Journal of Dermatological Science. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29857962" target="_blank">[PubMed]</a> </p>
+
+<!-- Added: May 15, 2018; Last updated: May 15, 2018 -->
 <p align="justify"> Pinto, S. M., Subbannayya, Y., Rex, D. A. B., Raju, R., Chatterjee, O., Advani, J., Radhakrishnan, A., Prasad, T. S. K., Wani, M. R. and Pandey, A. (2018). A network map of IL-33 signaling pathway. <em> Journal of Cell Communication and Signaling. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29705949" target="_blank">[PubMed]</a> </p>
 
 <p align="justify"> Danda, R., Ganapathy, K., Sathe, G., Madugundu, A. K., Krishnan, U. M., Khetan, V., Rishi, P., Gowda, H., Pandey, A., Subramanian, K., Prasad, T. S. K. and Elchuri, S. V. (2018). Membrane Proteome of Invasive Retinoblastoma: Differential Proteins and Biomarkers. <em> PROTEOMICS – Clinical Applications. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29742327" target="_blank">[PubMed]</a> </p>
