--- a/publications.html
+++ b/publications.html
@@ -115,6 +115,8 @@ function MM_swapImage() { //v3.0
                     <blockquote>
 					
 <p align="justify"><font color="#333366"><b>2018</b></font></p>
+<!-- Added: June 25, 2018; Last updated: June 25, 2018 -->
+<p align="justify"> Madugundu, A. K., Muthusamy, B., Sreenivasamurthy, S. K., Bhavani, C., Sharma, J., Kumar, B., Murthy, K. R., Ravikumar, R. and Pandey, A. (2018). A next generation sequencing-based molecular approach to characterize a tick vector in Lyme disease. <em> OMICS: A Journal of Integrative Biology. </em> In press. </p>
 <!-- Added: June 21, 2018; Last updated: June 21, 2018 -->
 <p align="justify"> Selvan, L. D. N., Danda, R., Madugundu, A. K., Puttamallesh, V. N., Sathe, G. J., Krishnan, U. M., Khetan, V., Rishi, P., Prasad, T. S. K., Pandey, A., Krishnakumar, S., Gowda, H. and Elchuri, S. V. (2018). Phosphoproteomics of Retinoblastoma: A pilot study identifies aberrant kinases. <em> Molecules. </em> 23. E1454. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29914080" target="_blank">[PubMed]</a> </p>
 <p align="justify"> Rajagopalan, P., Jain, A. P., Nanjappa, V., Patel, K., Mangalaparthi, K. K., Babu, N., Cavusoglu, N., Roy, N., Soeur, J., Breton, L., Pandey, A., Gowda, H., Chatterjee, A. and Misra, N. (2018). Proteome-wide changes in primary skin keratinocytes exposed to diesel particulate extract – a role for antioxidants in skin health. <em> Journal of Dermatological Science. </em> In press. <a href="http://www.ncbi.nlm.nih.gov/pubmed/29857962" target="_blank">[PubMed]</a> </p>
